--- a/client/static/css/style.css
+++ b/client/static/css/style.css
@@ -1,30 +1,40 @@
 /* Chrome, Safari, Edge, Opera */
-
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-
 /* Firefox */
 input[type=number] {
   -moz-appearance:textfield;
-}
-
-#index-title {
-    font-size: 2em;
 }
 
 h3, h4, h5 {
     font-weight: 400;
 }
 
+tr {
+    cursor: pointer;
+}
+
+
+/*navbar*/
 .navbar {
     background-color: #ececec;
 }
 
 .nav-item:hover {
     color: #afb9c1;
+}
+
+#anomaly-detector-name {
+    color: #17A2B8;
+}
+
+
+/*index and submission page*/
+#index-title {
+    font-size: 2em;
 }
 
 .index-div {
@@ -43,6 +53,7 @@ h3, h4, h5 {
     box-sizing: border-box;
 }
 
+/*upload file from local directory in pickJobParameters.html*/
 .custom-file-input{
     height: 100%;
 }
@@ -51,6 +62,7 @@ h3, h4, h5 {
     display: flex;
     align-items: center;
 }
+
 .custom-file-label.text-muted::after{
     height: 100%;
     display: flex;
@@ -58,6 +70,7 @@ h3, h4, h5 {
 }
 
 
+/*modal that shows up when a job is clicked on in the results.html file*/
 .modal {
     display: none;
     position: fixed;
@@ -78,9 +91,7 @@ h3, h4, h5 {
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
-    /*font-size: 1.5em;*/
 }
-
 
 .close {
     color: #aaaaaa;
@@ -95,20 +106,3 @@ h3, h4, h5 {
     text-decoration: none;
     cursor: pointer;
 }
-
-tr {
-    cursor: pointer;
-}
-
-#anomaly-detector-name {
-    color: #17A2B8;
-}
-
-/*a {*/
-    /*font-size: 1.2em !important;*/
-/*}*/
-
-
- /*label, input, #help-div, .cur-method {*/
-     /*font-size: 1.2em !important;*/
- /*}*/
